--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- Script -->
         <script src="script.js"></script>
         <script src="com/controllers/mainController.js"></script>
+        <script src="com/controllers/taskController.js"></script>
     </head>
     <body>
         <div ng-app="myApp">
